[package]
name = "n0n"
version = "0.1.0"
edition = "2021"

[dependencies]
# dryoc replaced with explicit primitives for compatibility
sodiumoxide = "0.2"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
egui = "0.27"
eframe = "0.27"
notify = "6.1"
rayon = "1.7"
log = "0.4"
env_logger = "0.10"
ssh2 = "0.9"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rfd = "0.14"
anyhow = "1.0"
walkdir = "2.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
redis = { version = "0.26", features = ["tokio-comp", "cluster-async"] }
url = "2.5"
google-cloud-storage = "0.18"
google-cloud-auth = "0.14"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_core = "0.21"
reqwest-dav = "0.5"
webdav-handler = "0.6"
ipfs-api-backend-hyper = "0.6"
futures-util = "0.3"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.6"

[features]
default = []
# Enable SFTP integration tests (requires env vars and a reachable server)
sftp-tests = []
