[package]
name = "n0n"
version = "0.1.0"
edition = "2021"

[dependencies]
# dryoc replaced with explicit primitives for compatibility
sodiumoxide = "0.2"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
egui = "0.27"
eframe = "0.27"
notify = "6.1"
rayon = "1.7"
log = "0.4"
env_logger = "0.10"
ssh2 = "0.9"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rfd = "0.14"
anyhow = "1.0"
walkdir = "2.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
redis = { version = "0.26", features = ["tokio-comp", "cluster-async"] }
url = "2.5"
google-cloud-storage = "0.18"
google-cloud-auth = "0.14"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_core = "0.21"
reqwest_dav = "0.2"
# webdav-handler = "0.2" # Temporarily disabled due to Windows compatibility issues
ipfs-api-backend-hyper = "0.6"
futures-util = "0.3"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
zip = "0.6"
uuid = { version = "1.0", features = ["v4"] }
# Advanced cryptographic operations dependencies
hkdf = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"
argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ring = "0.17"
x509-parser = "0.16"
webpki = "0.22"
rustls = "0.23"
rustls-pemfile = "2.0"
pkcs8 = "0.10"
rsa = "0.9"
p256 = "0.13"
ed25519-dalek = "2.0"
digest = "0.10"
hmac = "0.12"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.6"

[features]
default = []
# Enable SFTP integration tests (requires env vars and a reachable server)
sftp-tests = []
